--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "html": "^1.0.0",
-    "server": "^1.0.27",
-    "socket.io": "^2.3.0"
+    "server": "^1.0.27"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
