--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "html": "^1.0.0",
-    "server": "^1.0.27"
+    "html": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
