--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "html": "^1.0.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
