--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@supabase/supabase-js": "^1.35.3",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.17.1",
+    "googleapis": "^39.2.0",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
