--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "node":"14.x"
 },
   "scripts": {
-    "start": "node index"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
